--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1, user-scalable=no">
 <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body class = "centered-form">
   <div class="centered-form__form">
     <form action="/chat.html">
@@ -15,11 +16,11 @@
 </div>
 <div class ="form-field">
   <label> Display name </label>
-  <input type="text" name="name" autofocus/>
+  <input type="text" name="name" autofocus autocomplete="off"/>
 </div>
 <div class ="form-field">
   <label> Room name </label>
-  <input type="text" name="room"/>
+  <input type="text" name="room" autofocus autocomplete="off"/>
 </div>
 <div class ="form-field">
   <button>Join</button>
